# FunCodeSketches

./: .clang-format  al_google.clang-format  funprojects.code-workspace  gitpush.sh
collatz/: .fuse_hidden00002f6d00000001  CMakeCache.txt  CMakeLists.txt  Makefile  MyExample  cmake_install.cmake  collatz  collatz.cpp  collatz.hpp  main.cpp
gridgame/include/: griddrawer.h  gridgame.h  utils.h
gridgame/src/: griddrawer.cpp  gridgame.cpp  main.cpp
leetcode/src/: CMakeLists.txt  main  main.cpp
montecarlo/: monteCarlo.py  testoCarlo.py
montecpp/: CMakeCache.txt  CMakeLists.txt  Makefile  buildinstructions.txt  cmake_install.cmake  inputFunction.hpp  main.cpp  montecarlo.cpp  montecarlo.hpp  montecpp  outputFunction.hpp  simulator.hpp  simulatorFunction.hpp  tablesave.html  tablesave2.html  types.hpp
montecpp/include/: HTMLStubs.hpp  domainAnalyzer.hpp  inputFunction.hpp  outputFunction.hpp  predicates.hpp  simulator.hpp  simulatorFunction.hpp  tableVisualizer.hpp  types.hpp
montecpp/src/: HTMLStubs.cpp  main.cpp  tableVisualizer.cpp
plotplay/: dashex.py  sc.py
prolog/: adv.pl  pipes.pl  puz.pl  sudoku.pl  syn.pl  test.pl  tree.pl  tst.pl
